# rust-sandbox

./: .gitignore
rust-book/: README.adoc
rust-book/01_helloworld/01_main/: README.adoc  main.rs
rust-book/01_helloworld/02_cargo/: README.adoc
rust-book/02_guessing_game/: README.adoc
rust-book/02_guessing_game/src/: main.rs
rust-book/03_variables/: Cargo.toml  README.adoc
rust-book/03_variables/src/: main.rs  statements.rs  types.rs
rust-book/04_fibonnaci/src/: main.rs
rust-book/test_01_fibbonaci/: README.adoc
rust-book/test_01_fibbonaci/src/: main.rs
small-ones/array_slices/: Cargo.toml
small-ones/array_slices/src/: main.rs
small-ones/macros/: README.adoc
small-ones/macros/hello-world-macro-derive/: Cargo.toml
small-ones/macros/hello-world-macro-derive/src/: lib.rs
small-ones/macros/src/: main.rs
small-ones/serde_serialize/: Cargo.toml
small-ones/serde_serialize/src/: main.rs
small-ones/string_array/: Cargo.toml
small-ones/string_array/src/: main.rs
small-ones/yaml-loader/: Cargo.toml  README.adoc
small-ones/yaml-loader/src/: main.rs
solana/example-helloworld/: README.adoc
solana/example-helloworld/client-python/: hello_client.py  layout.py  requirements.txt
solana/example-helloworld/program-rust/: Cargo.toml
solana/example-helloworld/program-rust/src/: errors.rs  instruction.rs  instructions.rs  lib.rs  processor.rs
solana/example-helloworld/program-rust/tests/: lib.rs
solana/marinade-rs-sdk-test/: Anchor.toml  README.adoc
solana/marinade-rs-sdk-test/programs/marinade-rs-sdk-test/: Cargo.toml
solana/marinade-rs-sdk-test/programs/marinade-rs-sdk-test/src/: lib.rs
solana/marinade-rs-sdk-test/tests/: marinade-rs-sdk-test.ts  marinade-rs-sdk.ts
