[package]
name = "solana-chkp-counter"
version = "0.0.1"
description = "ChainKeepers counter contract"
authors = ["ChainKeepers.io <info@chainkeepers.io>"]
repository = "https://github.com/chainkeepers/core"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "~1.8.14"

[dev-dependencies]
solana-program-test = "~1.8.14"
solana-sdk = "~1.8.14"

[lib]
name = "chkpcounter"
crate-type = ["cdylib", "lib"]
