[package]
name = "solana-test-counter"
version = "0.0.1"
description = "Counter test contract"
authors = ["chalda <ondrej.chaloupka@protom.me>"]
repository = "https://github.com/ochaloup/rust-sandbox"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "~1.9.7"
thiserror = "1.0.24"

[dev-dependencies]
solana-program-test = "~1.9.7"
solana-sdk = "~1.9.7"

[lib]
name = "testcounter"
crate-type = ["cdylib", "lib"]
