[package]
name = "marinade-rs-sdk-test"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "marinade_rs_sdk_test"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.25.0"
# marinade-sdk = { git = "https://github.com/marinade-finance/marinade-sdk", features = ["no-entrypoint"] }
marinade-anchor-sdk = { path = "/home/chalda/marinade/marinade-sdk/libs/marinade-anchor-sdk" }
